bug fixed: on admin>categories>manage, align action icons on the middle of the line.
Better icons for clear admin themes (not only negative from roma icons)

git-svn-id: http://piwigo.org/svn/trunk@5698 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/themes/default/default-layout.css
+++ b/admin/themes/default/default-layout.css
@@ -97,7 +97,8 @@ LI.categoryLi {
 
 FORM#categoryOrdering UL.categoryActions {
 	float: right;
-	margin-top: 5px;
+        height:45px;
+        line-height:45px;
 }
 /* */
 
